Fix weird spacing on landing page

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -129,7 +129,6 @@ $alert-message-background: $brand-info
   background-color: $alert-message-background
 
 footer
-  margin-top: 40px
   min-height: 7em
   color: $gray-light
   background-color: darken($gray-darker, 7)
